--- a/index.html
+++ b/index.html
@@ -9,34 +9,30 @@
 				
 				//display date, subject, sender from window.geemails variable, create a div for each message
 
-//console.log('Does this work?');
-//console.log(window.geemails);
-
 for(i = 0; i < window.geemails.length; i++){
-	var messageBox = document.createElement('div');
-	messageBox.className = 'messageHeaders';
-	messageBox.innerHTML = window.geemails[i].date + window.geemails[i].sender + window.geemails[i].subject;
-	main.appendChild(messageBox);
+	var messageHeader = document.createElement('div');
+	messageHeader.className = 'messageHeaders';
+	messageHeader.innerHTML = window.geemails[i].date + window.geemails[i].sender + window.geemails[i].subject;
+	main.appendChild(messageHeader);
+
+	messageHeader.addEventListener('click', showHideBody);
 
 	var messageBody = document.createElement('div');
 	messageBody.className = 'messageBodies';
 	messageBody.innerHTML = window.geemails[i].body;
-	main.appendChild(messageBody);
+	messageBody.style.display = 'none';
+	//Why doesn't the CSS work instead?
+	messageHeader.appendChild(messageBody);
 }
 
-//first I must create child divs for the message bodies, hidden by default (using CSS)
-
-// var messageHeaders = document.getElementsByClassName(messageHeaders);
-
-// for(i = 0; i < window.geemails.length; i++){
-
-// }
-
-// message.addEventListener('click', showHideBody);
-
-// var messages
-
-
+function showHideBody(){
+	var messageClick = this.querySelector('.messageBodies');
+	if(messageClick.style.display === 'block'){
+		messageClick.style.display = 'none';
+	}else{
+		messageClick.style.display = 'block';
+	}
+}
 
 // var classname = document.getElementsByClassName("classname");
 
